<resources>
    <string name="app_name">PasswordVerificationApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Image1">TODO</string>
    <string name="verify_your_password_below">VERIFY YOUR PASSWORD BELOW</string>
    <string name="Enter_your_password_here">Enter your password here</string>
    <string name="re_enter_your_password_here">Re Enter your password here</string>
    <string name="submit">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="textview2">TextView2</string>
</resources>